# ifood-case

./: .gitignore  README.md  pyproject.toml  requirements.txt  validation_pre_data_processing.md
data/processed/lifecycle/: .part-00000-0683b9bc-2948-4e7e-b8ce-746b11a1df9b-c000.snappy.parquet.crc  .part-00001-5be53258-2e90-4c66-8b02-2926ea92f924-c000.snappy.parquet.crc  .part-00002-5be53258-2e90-4c66-8b02-2926ea92f924-c000.snappy.parquet.crc  .part-00003-0683b9bc-2948-4e7e-b8ce-746b11a1df9b-c000.snappy.parquet.crc  part-00000-0683b9bc-2948-4e7e-b8ce-746b11a1df9b-c000.snappy.parquet  part-00001-0683b9bc-2948-4e7e-b8ce-746b11a1df9b-c000.snappy.parquet  part-00002-0683b9bc-2948-4e7e-b8ce-746b11a1df9b-c000.snappy.parquet  part-00003-0683b9bc-2948-4e7e-b8ce-746b11a1df9b-c000.snappy.parquet
data/processed/offer_lifecycle/: .part-00000-46cecb22-68a0-48fe-a812-d21ecd72f327-c000.snappy.parquet.crc  .part-00001-46cecb22-68a0-48fe-a812-d21ecd72f327-c000.snappy.parquet.crc  .part-00002-46cecb22-68a0-48fe-a812-d21ecd72f327-c000.snappy.parquet.crc  .part-00003-46cecb22-68a0-48fe-a812-d21ecd72f327-c000.snappy.parquet.crc  .part-00004-46cecb22-68a0-48fe-a812-d21ecd72f327-c000.snappy.parquet.crc  .part-00005-46cecb22-68a0-48fe-a812-d21ecd72f327-c000.snappy.parquet.crc  part-00000-46cecb22-68a0-48fe-a812-d21ecd72f327-c000.snappy.parquet  part-00001-46cecb22-68a0-48fe-a812-d21ecd72f327-c000.snappy.parquet  (+4 more)
data/raw/: offers.json
notebooks/: 1_1_transactions_deep_dive.ipynb  1_data_processing.ipynb  2_modeling.ipynb
src/: offer_lifecycle.py
src/ifood/data_processing/: modeling.py  (+4 more)
(+15 files in other folders)
