[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifood-case"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "notebook>=7.5.6",
    "pandas>=3.0.3",
    "plotly>=4.8",
    "pyarrow>=15.0.0",
    "pyspark>=4.1.1",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
where = ["src"]
