[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifood-case"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "notebook>=7.5.6",
    "optuna>=4.8.0",
    "pandas>=3.0.3",
    "plotly>=4.8",
    "pyarrow>=15.0.0",
    "pyspark>=4.1.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
]

[tool.setuptools.packages.find]
where = ["src"]
